Removed some comments and cleaned up code

--- a/View2.html
+++ b/View2.html
@@ -2,7 +2,7 @@
 	<h2>Distance Calculator</h2>
 	Distance From:
 	<br />
-	<input type="text" id="from" placeholder="Type any city or address..."  ng-model="calculate.From" />
+	<input type="text" placeholder="Type any city or address..."  ng-model="calculate.From" />
     <button class="btn" style="margin:0px 0px 10px 10px;" ng-click="currentLocation();">Current Location</button>
 	<br />
     To:
