--- a/apptest.htm
+++ b/apptest.htm
@@ -19,8 +19,8 @@
                 <div class="span3" ng-controller="HeaderController">
                     <ul class="nav nav-list">
                         <li class="nav-header">Navigation</li>
-                        <li id="view1" ng-class="{ active: isActive('/view1') }"><a href="#/view1">View 1 (Data Manipulation)</a></li>
-                        <li id="view2" ng-class="{ active: isActive('/view2') }"><a href="#/view2">View 2 (Distance Calculator)</a></li>
+                        <li ng-class="{ active: isActive('/view1') }"><a href="#/view1">View 1 (Data Manipulation)</a></li>
+                        <li ng-class="{ active: isActive('/view2') }"><a href="#/view2">View 2 (Distance Calculator)</a></li>
                     </ul>
                 </div>
     
@@ -29,19 +29,5 @@
                 </div>
             </div>
         </div>    
-	<!--
-	<script>
-function makeActive(clicked_id) {
-	if (clicked_id == "view1"){
-		$("#view2").removeClass("active");
-		$("#view1").addClass("active");
-	}
-	if (clicked_id == "view2"){
-		$("#view2").addClass("active");
-		$("#view1").removeClass("active");
-	}
-}
-	</script>
-	-->
 	</body>
 </html>
