--- a/View2.html
+++ b/View2.html
@@ -3,14 +3,14 @@
 	Distance From:
 	<br />
 	<input type="text" placeholder="Type any city or address..."  ng-model="calculate.From" />
-    <button class="btn" style="margin:0px 0px 10px 10px;" ng-click="currentLocation();">Current Location</button>
+    <button class="btn btn-primary" style="margin:0px 0px 10px 10px;" ng-click="currentLocation();">Current Location</button>
 	<br />
     To:
     <br />
     <input type="text" placeholder="Type any city or address..." ng-model="calculate.To" />
     <br />
     <br />
-	<button class="btn" ng-click="calculate();">Calculate</button>
+	<button class="btn btn-primary" ng-click="calculate();">Calculate</button>
     <br />
     <br />
     <p>{{ distance }}</p>
