--- a/View2.html
+++ b/View2.html
@@ -1,19 +1,21 @@
 <div class="container">
 	<h2>Distance Calculator</h2>
-	Distance From:
-	<br />
-	<input type="text" placeholder="Type any city or address..."  ng-model="calculate.From" />
+    Distance From:
+    <br />
+    <input type="text" placeholder="Type any city or address..."  ng-model="calculate.From" />
     <button class="btn btn-primary" style="margin:0px 0px 10px 10px;" ng-click="currentLocation();">Current Location</button>
-	<br />
+    <br />
     To:
     <br />
-    <input type="text" placeholder="Type any city or address..." ng-model="calculate.To" />
-    <br />
-    <br />
-	<button class="btn btn-primary" ng-click="calculate();">Calculate</button>
-    <br />
-    <br />
-    <p>{{ distance }}</p>
-    <p>{{ duration }}</p>
-    <br />
+    <form ng-submit="calculate();">
+        <input type="text" placeholder="Type any city or address..." ng-model="calculate.To" />
+        <br />
+        <br />
+        <button type="submit" class="btn btn-primary">Calculate</button>
+        <br />
+        <br />
+        <p>{{ distance }}</p>
+        <p>{{ duration }}</p>
+        <br />
+    </form>
 </div>
