--- a/View3.html
+++ b/View3.html
@@ -1,3 +1,13 @@
 <div class="container">
 	<h2>Advanced Data Manipulation</h2>
+    <div class="span4">
+        <ul class="nav nav-list">
+            <li class="nav-header">Navigation</li>
+            <li ng-click="myData.doClick();" ng-class=""><a href="">View 1 (Data Manipulation)</a></li>
+        </ul>
+    </div>
+    
+    <div class="span5">
+    	
+    </div>
 </div> 
