--- a/apptest.htm
+++ b/apptest.htm
@@ -4,8 +4,8 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqcCWj4kF9oVx9M29t4kMG5lgtVblp9n0"></script>
-        <script type="text/javascript" src="/js/jquery-1.11.2.min.js"></script>
-		<script type="text/javascript" src="/js/app.js"></script>
+        <script type="text/javascript" src="/jquery-1.11.2.min.js"></script>
+		<script type="text/javascript" src="/app.js"></script>
         <script type="text/javascript" src="/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
         
