--- a/View1.html
+++ b/View1.html
@@ -1,13 +1,13 @@
 <div class="container">
 	<h2>Basic Data Manipulation</h2>
-    <form name="dataForm" ng-submit="addCustomer();">
-        Name:
-        <br />
-        <input type="text" autocomplete="off" ng-model="filter.name" />
-        <br />
-        <ul>
-            <li ng-repeat="cust in customers | filter:filter.name | orderBy:'name'">{{ cust.name }} - {{ cust.city }}</li>
-        </ul>
+	Name:
+    <br />
+    <input type="text" autocomplete="off" ng-model="filter.name" />
+    <br />
+    <ul>
+    	<li ng-repeat="cust in customers | filter:filter.name | orderBy:'name'">{{ cust.name }} - {{ cust.city }}</li>
+    </ul>
+    <form ng-submit="addCustomer();">
         <br />
         Customer Name: <br />
         <input type="text" autocomplete="off" ng-model="newCustomer.name" />
