--- a/index.htm
+++ b/index.htm
@@ -4,9 +4,9 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqcCWj4kF9oVx9M29t4kMG5lgtVblp9n0"></script>
-        <script type="text/javascript" src="/jquery-1.11.2.min.js"></script>
-		<script type="text/javascript" src="/app.js"></script>
-        <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="jquery-1.11.2.min.js"></script>
+		<script type="text/javascript" src="app.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
         
 		<meta charset="utf-8">
@@ -21,6 +21,7 @@
                         <li class="nav-header">Navigation</li>
                         <li ng-class="{ active: isActive('/view1') }"><a href="#/view1">View 1 (Data Manipulation)</a></li>
                         <li ng-class="{ active: isActive('/view2') }"><a href="#/view2">View 2 (Distance Calculator)</a></li>
+                        <li ng-class="{ active: isActive('/view3') }"><a href="#/view3">View 3</a></li>
                     </ul>
                 </div>
     
