--- a/View1.html
+++ b/View1.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<h2>Basic Data Manipulation</h2>
-	Name:
+	Filter:
     <br />
     <input type="text" autocomplete="off" ng-model="filter.name" />
     <br />
