Added new view, fixed selected data issue in view 3

--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,8 @@
                         <li class="nav-header">Navigation</li>
                         <li ng-class="{ active: isActive('/view1') }"><a href="#/view1">View 1 (Data Manipulation)</a></li>
                         <li ng-class="{ active: isActive('/view2') }"><a href="#/view2">View 2 (Distance Calculator)</a></li>
-                        <li ng-class="{ active: isActive('/view3') }"><a href="#/view3">View 3</a></li>
+                        <li ng-class="{ active: isActive('/view3') }"><a href="#/view3">View 3 (More Data)</a></li>
+                        <li ng-class="{ active: isActive('/view4') }"><a href="#/view4">View 4 (Events)</a></li>
                     </ul>
                 </div>
     
